[web] [fix] chevron size + plus spacing
Summary:
adjust chevrons for padding, additonally, removed a wrapping div because it was causing an additonal 3-4px of bottom padding throwing off the alignment of the chevrons

before: {F17529}
after: {F17528}
{F17536}

Test Plan:
match figma + centered. I have an unrelated diff addressing the color of the chevron being incorrect. https://phabricator.ashoat.com/D3327

https://www.figma.com/file/a1nkbWgbgjRlrOY9LVurTz/?node-id=1170%3A77104

Reviewers: atul, ashoat

Reviewed By: atul, ashoat

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3330

--- a/web/chat/chat-thread-ancestors.css
+++ b/web/chat/chat-thread-ancestors.css
@@ -29,7 +29,7 @@ div.ancestorKeyserverName {
   border-radius: 0px 2px 2px 0px;
 }
 
-div.ancestorSeparator {
+svg.ancestorSeparator {
   color: var(--thread-ancestor-separator-color);
 }
 
